--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
   <!-- QR code scanner (loads Html5Qrcode globally) -->
-  <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+<!--   <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script> -->
+  <script src="qr.min.js"></script>
 
   <style>
     /* Printable invoice helpers */
